--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,6 +7,9 @@ services:
     api.ProductoService:
         class:        AppBundle\Service\ProductoService
         arguments:    ["@doctrine.orm.entity_manager", "@service_container"]
+
+    utility.jsonService:
+        class:        AppBundle\Utility\ParsingJsonService
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
